# ibac-talk-demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
authorization/: model.fga  model.fga.yaml
scripts/: auth_server.py
src/: agent.py  authz_flow.py  mcp_remote.py  mcp_server.py  test_remote_server.py  utils.py
src/servers/: __init__.py  email.py  linear.py  slack.py
src/task_authz/: __init__.py  config.py  meta_tools.py  middleware.py  resolution.py
tests/: test_agent.py  test_authz_flow_extras.py  test_config.py  test_discovery_phase.py  test_e2e_openfga.py  test_linear.py  test_mcp_remote.py  test_meta_tools.py  test_middleware_unit.py  test_permission_openfga.py  test_resolution.py  test_slack_parser.py  test_utils.py
web/backend/: app.py  elicitation.py  event_bus.py  flow_runner.py  permissions.py  ws.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.tsx  types.ts
web/frontend/src/components/: ActivityEvent.tsx  ActivityPanel.tsx  ChatMessage.tsx  ChatPanel.tsx  DemoLayout.tsx  ElicitationCard.tsx  FlowSelector.tsx  SessionFlowDiagram.tsx  ToolCallCard.tsx
web/frontend/src/hooks/: useActivity.ts  useChat.ts  useFlowSession.ts  useWebSocket.ts
web/frontend/src/pages/: FlowPage.tsx  PermissionsPage.tsx
