[project]
name = "mcpdev-demo"
version = "0.1.0"
description = "Task-scoped authorization for AI agents using MCP and OpenFGA"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1,<4",
    "anthropic>=0.85,<1",
    "openfga-sdk>=0.9,<1",
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.42,<1",
    "websockets>=16,<17",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "bandit",
    "pip-audit",
    "vulture",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.mypy]
mypy_path = "src"
